--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "exit 0"
   },
+  "publishConfig": {
+   "@pdrodavi:registry": "https://npm.pkg.github.com"
+  },
   "author": "pedro davi",
   "license": "ISC"
 }
